# YAPOM

./: .gitignore  README.md  main.py  pyproject.toml
output/ALL/2024-11-01_13-55/clab-vios-lab-vios1/: show_interfaces.txt  show_inventory.txt  show_ip_ospf_neighbor.txt  show_ip_protocols.txt  show_ip_route.txt  show_logging.txt  show_memory_statistics.txt  show_processes_cpu.txt  show_running-config.txt  show_version.txt
output/ALL/2024-11-01_13-55/clab-vios-lab-vios2/: show_interfaces.txt  show_inventory.txt  show_ip_ospf_neighbor.txt  show_ip_protocols.txt  show_ip_route.txt  show_logging.txt  show_memory_statistics.txt  show_processes_cpu.txt  show_running-config.txt  show_version.txt
output/ALL/2024-11-01_13-58/clab-vios-lab-vios1/: show_ip_ospf_neighbor.txt  show_ip_protocols.txt  show_ip_route.txt
output/ALL/2024-11-01_13-58/clab-vios-lab-vios2/: show_ip_ospf_neighbor.txt  show_ip_protocols.txt  show_ip_route.txt
output/ALL/2024-11-09_07-13/clab-vios-lab-vios1/: show interfaces.txt  show inventory.txt  show ip protocols.txt  show logging.txt  show memory statistics.txt  show processes cpu.txt  show running-config.txt  show version.txt
output/ALL/2024-11-09_07-13/clab-vios-lab-vios2/: show interfaces.txt  show inventory.txt  show ip interface brief.txt  show ip route.txt  show logging.txt  show memory statistics.txt  show processes cpu.txt  show running-config.txt  show version.txt
shared/nornir_data/: config.yaml  groups.yaml  hosts.yaml
shared/services/: api-services.py  mod.py
workers/: bgp_analysis.py  ospf_analysis.py
(+10 files in other folders)
